# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  TodoList.md  main.cpp
include/: emit_opengl.h
include/Backend/: complex.h  image-processing.h  screenshot.h
include/GUI/: canvas.h  colormap.h  shapes.h
lib/Backend/: complex.cpp  image-processing.cpp  screenshot.cpp
lib/GUI/: canvas.cpp  colormap.cpp  shapes.cpp
